plugins {
    id 'java'
}

group 'com.uddernetworks.newocr'
version '1.0-SNAPSHOT'

sourceCompatibility = 1.8

repositories {
    mavenCentral()
}

dependencies {
    testCompile group: 'junit', name: 'junit', version: '4.12'

    compile group: 'com.zaxxer', name: 'HikariCP', version: '2.7.8'
    compile group: 'mysql', name: 'mysql-connector-java', version: '5.1.6'
}
